# pedantic

./: .dockerignore  .gitignore  Dockerfile  README.md  bot.py  corrector.py  discord.py  main.py  maybe.py  model.py  pyproject.toml
docs/source/: conf.py  index.rst
lib/: http.py  websocket.py
