[tool.poetry]
name = "luisbessewellpracticafinal"
version = "0.1.0"
description = ""
authors = ["Frairlyn Camilo Roque Suarez <frailin300@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
python-dotenv = "^1.0.1"
Sphinx = { version = "^6.1.0", optional = true }
sphinx-autoapi = "^3.0.0"


[tool.poetry.group.dev.dependencies]
ptvsd = "^4.3.2"
ipython = "^8.23.0"

[tool.poetry.extras]
docs = ["Sphinx", "sphinx-autoapi"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
